# drl_learning_lab

./: .gitignore  AGENTS.md  LICENSE  README.md  environment.yml  pyproject.toml
course/: 00_ml_foundations.md  01_pytorch_foundations.md  02_rl_math.md  03_tabular_rl.md  04_dqn.md  06_spinningup_track.md  07_experiment_engineering.md  08_export_deployment.md  index.md
course/05_policy_gradient/: ddpg.md  index.md  ppo.md  sac.md  td3.md  trpo.md  vpg.md
curriculum/: README.md  glossary.md  status.md
docs/: chapter_progress_plan.md  debug_checklist.md  experiment_report_template.md  export_checklist.md  first_month_plan.md  iteration_guide.md  learning_readiness_audit.md  resources.md  roadmap.md  self_study_audit.md
docs/templates/: course_chapter_template.md  lab_exercises_template.md  lab_report_template.md
labs/00_ml_foundations/: exercises.md  notes.md  report.md
labs/01_pytorch_foundations/: exercises.md  notes.md  report.md
labs/02_rl_math/: exercises.md  notes.md  report.md
labs/03_tabular_rl/: exercises.md  notes.md  report.md
labs/04_dqn/: exercises.md  notes.md  report.md
labs/05_policy_gradient/: exercises.md  notes.md  report.md
labs/06_spinningup_track/: README.md  exercises.md  notes.md  report.md
src/drl_lab/: __init__.py
tests/: test_checkpoint.py  test_ddpg.py  test_dqn.py  test_experiment_snapshots.py  test_export_formats.py  test_learning_structure.py  test_networks.py  test_onnx_consistency.py  test_ppo.py  test_sac.py  test_seed.py  test_supervised_examples.py  test_tabular.py  test_td3.py  test_trpo.py  test_vpg.py
(+221 files in other folders)
