[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drl-learning-lab"
version = "0.1.0"
description = "A self-study lab for deep reinforcement learning and PyTorch engineering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "onnx>=1.15",
  "onnxruntime>=1.17",
  "gymnasium>=0.29",
  "pyyaml>=6.0",
  "tensorboard>=2.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["drl_lab"]

[[tool.mypy.overrides]]
module = ["onnxruntime.*"]
ignore_missing_imports = true
